manifests/app/tsd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsdsystem-app-svc
  # namespace: tsd-replica
  labels:
    app: tsd
spec:
  ports:
    - port: 80
  selector:
    app: tsd
    tier: frontend
  clusterIP: None
